<resources>
    <string name="app_name">OnePlusTwoEqualsThree_Remake</string>
    <string name="game_title_top">One Two</string>
    <string name="game_title_bottom">Three</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
</resources>