<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/avMenuActivity"
        android:background="@drawable/menu_background_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvTitleTextTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/game_title_top"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#E8E8E8"
                android:textSize="@dimen/game_title_font_size_top"
                android:fontFamily="@font/grand_galaxy"
                android:maxLines="2"
                android:shadowColor="@color/white"
                android:shadowRadius="10"
                android:shadowDx="0"
                android:shadowDy="5"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitleTextBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/game_title_bottom"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#E8E8E8"
                android:textSize="@dimen/game_title_font_size_bottom"
                android:fontFamily="@font/grand_galaxy"
                android:maxLines="2"
                android:shadowColor="@color/white"
                android:shadowRadius="10"
                android:shadowDx="0"
                android:shadowDy="5"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTextTop" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlay"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:text="@string/play"
                android:background="@drawable/menu_button"
                android:fontFamily="@font/grand_galaxy"
                android:paddingVertical="12dp"
                android:textColor="#888888"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTextBottom" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSettings"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings"
                android:background="@drawable/menu_button"
                android:fontFamily="@font/grand_galaxy"
                android:paddingVertical="12dp"
                android:textColor="#888888"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPlay" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Exit"
                android:background="@drawable/menu_button"
                android:fontFamily="@font/grand_galaxy"
                android:paddingVertical="12dp"
                android:textColor="#888888"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSettings" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>